--- a/TwitterCreeper/res/values/strings.xml
+++ b/TwitterCreeper/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_list_feed">TwitterCreeper</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
